--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             finalMessage.style.color = '#4a5568';
             finalMessage.style.fontSize = '16px';
             finalMessage.style.fontWeight = '400';
-            finalMessage.innerHTML = "Now that the internet has decided the big questions,<br>you are finally free from the endless debates.";
+            finalMessage.innerHTML = "Now that internet has decided the big questions,<br>you are free from the endless debates.";
             container.appendChild(finalMessage);
 
             // Add the share button
