--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 }
             });
             
-            shareText += "📌 Take the quiz at: [Your Website URL]";
+            shareText += "📌 Take the quiz at: https://alvinson-tech.github.io/Lets-Settle-This/";
             
             navigator.clipboard.writeText(shareText).then(() => {
                 button.textContent = "It's Copied! Paste it anywhere! Have Fun!";
