--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 }
             });
             
-            shareText += "📌 Take the quiz at: https://alvinson-tech.github.io/Lets-Settle-This/";
+            shareText += "📌 Try it out at: https://alvinson-tech.github.io/Lets-Settle-This/";
             
             navigator.clipboard.writeText(shareText).then(() => {
                 button.textContent = "It's Copied! Paste it anywhere! Have Fun!";
