--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     b: questionIcons.dog_back
                 },
                 correctAnswer: "b",
-                resultMessage: "The dog would wear pants like this.",
+                resultMessage: "The dog would wear pants like the 2nd option.",
                 stats: {
                     percentages: [17, 83],
                     totalVotes: 8378965
